--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </g>
             </svg>
 
-            <a class="btn waves-effect waves-light" href="mailto:kilian.frey@gmail.com">Contact us<i class="material-icons right">email</i></a>
+            <a class="btn waves-effect waves-light" href="mailto:info@mapgeist.com">Contact us<i class="material-icons right">email</i></a>
 
            </div> 
         </div>
